[package]
name = "findup"
version = "0.1.0"
edition = "2021"
description = "Sucht nach doppelten Dateien"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
sha2 = "0.10"
colored = "2"

[dev-dependencies]
trycmd = "0.14.15"